<resources>
    <string name="app_name">Заметки</string>
    <string name="add">Добавить</string>
    <string name="title_is_empty">заметка пуста</string>
    <string name="title_note">Текст, текст, ...</string>
    <string name="no_sorting">не сортировать</string>
    <string name="title_sorting">по тексту</string>
    <string name="create_date_sorting" >по дате создания</string>
    <string name="edited_date_sorting">по дате редактирования</string>
    <string name="save">сохранить</string>
    <string name="tag">тэг</string>
    <string name="tags">Тэги: %1$s</string>
    <string name="ok">OK</string>
    <string name="cancel">отмена</string>
    <string name="add_tag"><b>Добавить тэг</b></string>
    <string name="tag_is_empty">Пустой тэг</string>
    <string name="note">заметка</string>
    <string name="copy_success">Скопировано успешно</string>
</resources>