<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/title_edit"
        android:singleLine="false"
        android:hint="@string/title_note"
        android:gravity="top|start"
        android:paddingBottom="16dp"
        android:layout_weight="1"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/tags"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ru.freeit.notes.presentation.screens.note.AddChip
            android:id="@+id/add_tag_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag" />

    </com.google.android.material.chip.ChipGroup>

    <Button
        android:id="@+id/apply_button"
        android:layout_width="240dp"
        android:text="@string/add"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_height="wrap_content" />

</androidx.appcompat.widget.LinearLayoutCompat>